Adding alt="" to bg imgs

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 
     <div class="card">
-      <img class="image" src="./images/illustration-woman-online-mobile.svg">
-      <img class="image-desktop" src="./images/illustration-box-desktop.svg">
+      <img class="image" alt="" src="./images/illustration-woman-online-mobile.svg">
+      <img class="image-desktop" alt="" src="./images/illustration-box-desktop.svg">
       
       <div class="card-content">
         <h1>FAQ</h1>
